--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAG332</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
+
+<header>
+
+    <li>|</li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">Console</a></li>
+    <li><a href="index.html">Games</a></li>
+    <li><a href="index.html">Contact Us</a></li>
+
+
+
+ 
+</div>
+
+
+</header>
 <body>
     
 </body>
