--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
     
     <nav>
-        <h3>adom jobba 
+        <h3>adom jobba vi har plasysation tikll slsut köp n vid eleoegetane och emdia amkrte vi erbjuder även if a annars ska vi knulla era morsor o  ni inte köper nikemdemo felo feloooo
 
         </h3>     
 
