--- a/index.html
+++ b/index.html
@@ -37,5 +37,30 @@
         </h3>     
 
     </nav>
+    <div class="container">
+
+
+
+
+    
+    <div class=" div1">
+
+    Consoles
+<p></p>
+</div>
+<div class="div2">
+
+
+    Games
+
+
+
+</div>
+<div class="div3">
+    
+
+    Contact us
+</div> --
+</div>
 </body>
 </html>
