--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAG332</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="script.js">
 </head>
 
 
