--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>    
         <div class="divpascal div3">       
             Contact us
+            <h3>hello</h3>
         </div> 
     </div>
 
