--- a/index.html
+++ b/index.html
@@ -66,18 +66,14 @@
         </h3>     
     </nav>
     <div class="container">
-        <div class="divpascal div1">
-            <li><a href="index.html">Console</a></li>
-            <button type="button"
+            <button class= "pascal2"type="button"
             onclick="document.getElementById('demo').innerHTML = Date()">
             Console</button>
             
             <p id="demo"></p>
             
         </div>
-        <div class="divpascal div2">
-            <li><a href="index.html">Games</a></li>
-            <button type="button"
+            <button class= "pascal1"type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Games</button>
 
