--- a/console.html
+++ b/console.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="console.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="console.css">
+</head><body>
+<header>
+    <li><a href="index.html"><img src="images/The-Rag-logo_chosen_WHITE.png" width="40px" alt=""></a></li>
+    <li>|</li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">Console</a></li>
+    <li><a href="index.html">Games</a></li>
+    <li><a href="index.html">Contact Us</a></li>
+    <div class="search bar">
+        <div class="topnav">
+            <input type="text" placeholder="Search..">
+        </div>
+    </div>
+
+</header>
+<div class="container">
+    <button class="pascal2" type="button" onclick="document.getElementById('demo').innerHTML">
+
+        <img src="images/playstation-5.jpg" width="200px" height="100px"  alt=""></button>
+
+    <p id="demo"></p>
+
+    <button class="pascal1" type="button" onclick="document.getElementById('demo').innerHTML">
+        <img src="images/ps4.jpg" width="200px" height="100px" alt=""></button>
+
+    <p id="demo"></p>
+
+
+    <button class="pascal" type="button" onclick="document.getElementById('demo').innerHTML">
+        Contact Us</button>
+
+    <p id="demo"></p>
+
+</div>
+
+
+
 </body>
+
+
 </html>
