--- a/games.html
+++ b/games.html
@@ -67,10 +67,9 @@
           
       </div>
       </div>
-      
       <div class="container-information">
-        <h3>(PlayStation 5) The latest Sony PlayStation introduced in November 2020. Powered by an eight-core AMD Zen 2 CPU and custom AMD Radeon GPU, the PS5 is offered in two models: with and without a 4K Blu-ray drive. Supporting a 120Hz video refresh, the PS5 is considerably more powerful than the PS4 and PS4 Pro.</h3>
-        <h3>(PlayStation 5) The latest Sony PlayStation introduced in November 2020. Powered by an eight-core AMD Zen 2 CPU and custom AMD Radeon GPU, the PS5 is offered in two models: with and without a 4K Blu-ray drive. Supporting a 120Hz video refresh, the PS5 is considerably more powerful than the PS4 and PS4 Pro.</h3>
+        <p></p>(PlayStation 5) The latest Sony PlayStation introduced in November 2020. Powered by an eight-core AMD Zen 2 CPU and custom AMD Radeon GPU, the PS5 is offered in two models: with and without a 4K Blu-ray drive. Supporting a 120Hz video refresh, the PS5 is considerably more powerful than the PS4 and PS4 Pro.</p>
+        <p></p>(PlayStation 5) The latest Sony PlayStation introduced in November 2020. Powered by an eight-core AMD Zen 2 CPU and custom AMD Radeon GPU, the PS5 is offered in two models: with and without a 4K Blu-ray drive. Supporting a 120Hz video refresh, the PS5 is considerably more powerful than the PS4 and PS4 Pro.</p>
       </div>
 
       <div class="container-knappar">
@@ -103,7 +102,7 @@
 const swiper = new Swiper('.swiper', {
     autoplay:{
 
-        delay:2000,
+        delay:3000,
         disableOnInteraction: false,
     },
 loop: true,
@@ -125,7 +124,7 @@ prevEl: '.swiper-button-prev',
 const container2= new swiper('.container2', {
     autoplay:{
 
-        delay:2000,
+        delay:3000,
         disableOnInteraction: false,
     },
 loop: true,
