--- a/console.html
+++ b/console.html
@@ -23,24 +23,34 @@
 
 </header>
 <div class="container">
-    <button class="pascal2" type="button" onclick="document.getElementById('demo').innerHTML">
+    <div class="pascal2"   onclick="document.getElementById('demo').innerHTML">
 
-        <img src="images/playstation-5.jpg" width="200px" height="100px"  alt=""></button>
+        <img src="images/playstation-5.jpg" width="400px" height="200px"  alt=""></button>
+
+    <p id="demo"></p>
+    </div> 
+    <div class="pascal1"  onclick="document.getElementById('demo').innerHTML">
+        <img src="images/ps4.jpg" width="400px" height="200px" alt=""></button>
 
     <p id="demo"></p>
 
-    <button class="pascal1" type="button" onclick="document.getElementById('demo').innerHTML">
-        <img src="images/ps4.jpg" width="200px" height="100px" alt=""></button>
+   
 
-    <p id="demo"></p>
-
-
-    <button class="pascal" type="button" onclick="document.getElementById('demo').innerHTML">
-        Contact Us</button>
-
-    <p id="demo"></p>
-
+    </div> 
 </div>
+    <div class="container-knappar">
+        <button class= "pascal"type="button"
+        onclick="document.getElementById('demo').innerHTML">
+        LEARN MORE</button>
+        
+        <p id="demo"></p>
+
+            <button class= "pascal"type="button"
+            onclick="document.getElementById('demo').innerHTML">
+            LEARN MORE</button>
+    </div>
+    
+
 
 
 
