--- a/console.html
+++ b/console.html
@@ -12,9 +12,9 @@
     <li><a href="index.html"><img src="images/The-Rag-logo_chosen_WHITE.png" width="40px" alt=""></a></li>
     <li>|</li>
     <li><a href="index.html">Home</a></li>
-    <li><a href="index.html">Console</a></li>
-    <li><a href="index.html">Games</a></li>
-    <li><a href="index.html">Contact Us</a></li>
+    <li><a href="console.html">Console</a></li>
+    <li><a href="games.html">Games</a></li>
+    <li><a href="about us.css">Contact Us</a></li>
     <div class="search bar">
         <div class="topnav">
             <input type="text" placeholder="Search..">
