--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <li><a class href="index.html"><img src="images/The-Rag-logo_chosen_WHITE.png" width="40px" alt=""></a></li>
     <li class="text" >|</li>
     <li><a class="text" href="index.html"> Home</a></li>
-    <li><a class="text" href="index.html">Console</a></li>
-    <li><a class="text" href="index.html">Games</a></li>
-    <li><a class="text" href="index.html">Contact Us</a></li>
+    <li><a class="text" href="console.html">Console</a></li>
+    <li><a class="text" href="games.html">Games</a></li>
+    <li><a class="text" href="about us.html">Contact Us</a></li>
 
 <div class="search bar">
 
@@ -32,6 +32,7 @@
         <input type="text" placeholder="Search..">
       </div>
 
+      <button onclick="myFunction()">Toggle dark mode</button>
 
 </div>
 
@@ -41,7 +42,7 @@
 
 
 </header>   
-<body id="body">  
+<body id="body">    
   <hr style="height:2px;border-width:0;color:white;background-color:white">
 
     
@@ -139,7 +140,6 @@
 });
 </script>
 
-<button onclick="myFunction()">Toggle dark mode</button>
 
 <script>
   function myFunction() {
