--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
 </div>
 
- 
-</div>
+
 
 
 
@@ -159,13 +158,6 @@ document.getElementById("nav").style.backgroundColor = "black"
 document.getElementById("footer").style.backgroundColor = "black" 
 document.getElementById("body").style.backgroundColor = "black" 
 
-
-
-
-
-
-
-
 </script>
 
 <div class="container4">
@@ -191,7 +183,7 @@ document.getElementById("body").style.backgroundColor = "black"
           <span class="slider">
           <label/>
 
-          <div/>
+<div/>
 
 </body>
-
+</html>
