--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
+              hgchchchchgchchchg
               <div class="swiper-slide"><img src="images/wp7841598.webp" ></div>
               <div class="swiper-slide"><img src="images/cKMZShXuepVCX35j5ihkh3.jpg" alt=""></div>
             </div>
