hhRevert "Merge branch 'main' of https://github.com/Adam3362/RAG336"
This reverts commit 02010eb6a8e41410eb270b01c97ade9711afc523, reversing
changes made to 81a10bb4d579ca918c2ac6091b0e0378bf364a93.

--- a/console.html
+++ b/console.html
@@ -38,7 +38,7 @@
 
     </div> 
 </div>
-    <div class="containerknappar">
+    <div class="container-knappar">
         <button class= "pascal"type="button"
         onclick="document.getElementById('demo').innerHTML">
         LEARN MORE</button>
