--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAG332</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -36,7 +36,14 @@
 
 </div>
 
- 
+<div id="range-slider">
+  <div class="main">
+    <input type="range" id="brightness-range" min="50" max="100" value="100" onchange="fun(this)">
+
+  
+  </div>
+</div>
+
 </div>
 
 
