--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <li><a class="text" href="index.html"> Home</a></li>
     <li><a class="text" href="console.html">Console</a></li>
     <li><a class="text" href="games.html">Games</a></li>
-    <li><a class="text" href="about us.html">Contact Us</a></li>
+    <li><a class="text" href="about us.html">Contact Uss</a></li>
 
 <div class="search bar">
 
