Revert "riktiga hemsidan officalllll"
This reverts commit ee675278c2197e82b86c5dd2d27bcf5bbcd4fd7a.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAG332</title>
     <link rel="stylesheet" href="main.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="script.js">
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -36,14 +36,7 @@
 
 </div>
 
-<div id="range-slider">
-  <div class="main">
-    <input type="range" id="brightness-range" min="50" max="100" value="100" onchange="fun(this)">
-
-  
-  </div>
-</div>
-
+ 
 </div>
 
 
