--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 </header>   
 <body id="body">    
+  <hr style="height:2px;border-width:0;color:white;background-color:white">
 
     
     <div class="container1">
