--- a/console.html
+++ b/console.html
@@ -17,7 +17,7 @@
     <li><a href="about us.css">Contact Us</a></li>
     <div class="search bar">
         <div class="topnav">
-            <input type="text" placeholder="Search..">
+            <input type="text" placeholder="Search...">
         </div>
     </div>
 
