--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="text" placeholder="Search..">
       </div>
 
-      <button onclick="myFunction()">Toggle dark mode</button>
+      <button onclick="myFunction()">dark mode</button>
 
 </div>
 <div id="range-slider">
