--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
   <div class="splash">
 
-    <h1 class="fade-in"> Welcome To Rag </h1>
+    <h1 class="fade-in" height="100px"> Welcome To Rag </h1>
 
     <img class="fade-in" src="images/The-Rag-logo_chosen_WHITE.png" width="100px" alt="">
   </div>
-  <button onclick="myFunction()">Dark Mode</button>
+  
 
   <header id="header">
+      <button onclick="myFunction()">Dark Mode</button>
 
 
     <li><a class href="index.html"><img src="images/The-Rag-logo_chosen_WHITE.png" width="40px" alt=""></a></li>
@@ -31,8 +32,9 @@
     <li><a class="text" href="console.html">Console</a></li>
     <li><a class="text" href="games.html">Games</a></li>
     <li><a class="text" href="about us.html">About Us</a></li>
-
+  
     </div>
+  
     <div id="range-slider">
       <div class="main">
         <input type="range" id="brightness-range" min="50" max="100" value="100" onchange="fun(this)">
@@ -202,3 +204,5 @@
 </script>
 
 </body>
+
+</html>
